# mate-runner

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  org.mate.applets.MateRunnerApplet.mate-panel-applet.in  org.mate.applets.MateRunnerApplet.mate-panel-applet.in.in  org.mate.panel.applet.MateRunnerAppletFactory.service.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
po/: Makefile  Makefile.in  POTFILES  af.gmo  am.gmo  ar.gmo  as.gmo  ast.gmo  az.gmo  be.gmo  be@latin.gmo  bg.gmo  bn.gmo  bn_IN.gmo  br.gmo  bs.gmo  ca.gmo  ca@valencia.gmo  crh.gmo  cs.gmo  cy.gmo  da.gmo  de.gmo  dz.gmo  el.gmo  en@shaw.gmo  en_AU.gmo  en_CA.gmo  en_GB.gmo  eo.gmo  es.gmo  es_AR.gmo  es_CL.gmo  es_CO.gmo  es_CR.gmo  es_DO.gmo  es_EC.gmo  es_ES.gmo  es_GT.gmo  es_HN.gmo  (+73 more)
src/: mate-runner-applet.c
