AC_INIT(src/mate-runner-applet.c)

PACKAGE=mate-runner-applet
VERSION=0.0.1

IT_PROG_INTLTOOL([0.35.0])

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.24)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.32)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GIO, gio-2.0 >= 2.32)
AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)

PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1 >= 0.100.2)
AC_SUBST(DBUS_GLIB_CFLAGS)
AC_SUBST(DBUS_GLIB_LIBS)

PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.38)
AC_SUBST(SOUP_CFLAGS)
AC_SUBST(SOUP_LIBS)

PKG_CHECK_MODULES(GIO_UNIX, gio-unix-2.0 >= 2.32)
AC_SUBST(GIO_UNIX_CFLAGS)
AC_SUBST(GIO_UNIX_LIBS)

PKG_CHECK_MODULES(MATE_SETTINGS, mate-settings-daemon >= 1.6.0)
AC_SUBST(MATE_SETTINGS_CFLAGS)
AC_SUBST(MATE_SETTINGS_LIBS)

PKG_CHECK_MODULES(MATE_PANEL_APPLET, libmatepanelapplet-4.0 >= 1.6.0)
AC_SUBST(MATE_PANEL_APPLET_CFLAGS)
AC_SUBST(MATE_PANEL_APPLET_LIBS)

AC_PROG_CC

AM_PROG_CC_C_O

AC_OUTPUT(Makefile)
